--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
     "test": "npm run lint && karma start --single-run",
-    "test-bamboo": "npm run lint && karma start --single-run"
+    "test-bamboo": "npm run lint && npm run sauce",
+    "sauce": "karma start karma.saucelabs.js"
   },
   "repository": {
     "type": "git",
@@ -27,8 +28,11 @@
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
+    "karma-bamboo-reporter": "^0.1.2",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
+    "karma-sauce-launcher": "^2.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.2",
     "terser-webpack-plugin": "^2.0.1",
